[gd_scene load_steps=7 format=2]

[ext_resource path="res://character/Character.gd" type="Script" id=1]
[ext_resource path="res://weapons/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://CharacterFSM.gd" type="Script" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float flash_modifier = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Animation" id=3]
resource_name = "damage"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Character" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Body" type="Node2D" parent="."]
material = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]

[node name="Timers" type="Node" parent="."]

[node name="StunTimer" type="Timer" parent="Timers"]

[node name="Tweens" type="Node" parent="."]

[node name="DamageAnimator" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
[connection signal="stunned" from="." to="StateMachine" method="_on_stun"]
[connection signal="damaged" from="Hitbox" to="." method="_on_Hitbox_damaged"]
[connection signal="timeout" from="Timers/StunTimer" to="StateMachine" method="_on_stun_timeout"]
